--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://i.imgur.com/qlgoLVk.png");
+	background-image: url("https://cdn.discordapp.com/attachments/404597931862130698/404608844824707093/Screenshot_40.png");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
