--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
   background-image: url("https://cdn.discordapp.com/attachments/404597931862130698/404614397605183499/Screenshot_42.png");
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
