--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,9 @@ html {
 body {
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  background-image: url("https://cdn.discordapp.com/attachments/404597931862130698/404614397605183499/Screenshot_42.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container {
