--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,8 @@ body {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
+	 background: linear-gradient(to bottom right, #42eef4, #0f5b5e);
+  border-radius: 25px;
 }
 
 h1, h2, h3, h4, h5, h6 {
