--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
   font: 18px/1.4 $helvetica;
   color: $darkGray;
-  background-image: url("https://cdn.discordapp.com/attachments/398537521937514518/404633044100579344/Screenshot_49.png");
+  background-image: image/49A34013-8E87-4911-B13B-0DB243D09677.png;
   background-repeat: no-repeat;
   background-size: cover;
 }
