--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
   font: 18px/1.4 $helvetica;
   color: $darkGray;
-  background-image: images/49A34013-8E87-4911-B13B-0DB243D09677.png;
+  background-image: url(https://cdn.discordapp.com/attachments/404597931862130698/404636785176739841/image.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
