--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,7 @@ body {
   background-image: url(https://cdn.discordapp.com/attachments/404597931862130698/404636785176739841/image.png);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: left bottom;
 }
 
 .container {
