--- a/style.scss
+++ b/style.scss
@@ -20,8 +20,8 @@ html {
 body {
   font: 18px/1.4 $helvetica;
   color: $darkGray;
-  background-image: url(https://cdn.discordapp.com/attachments/404597931862130698/404644337088069632/Screenshot_53.png);
-  background-repeat: no-repeat;
+  background-image: url(https://cdn.discordapp.com/attachments/404597931862130698/404655842814590976/image.png);
+  background-repeat: repeat-y;
   background-size: cover;
 }
 
