--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,7 @@ body {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
-	 background: linear-gradient(to bottom right, #42eef4, #0f5b5e);
+  background: linear-gradient(to bottom right, rgba(66, 238, 244, 0.63), rgba(15, 91, 94, 0.66));
   border-radius: 25px;
 }
 
