--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,7 @@ body {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
-  background: linear-gradient(to bottom right, rgba(75, 231, 234, 0.63), rgba(89, 126, 127, 0.66));
+  background: linear-gradient(to bottom, rgba(66, 191, 244, 0.63), rgba(57, 160, 229, 0.43));
   border-radius: 25px;
 }
 
